[package]
name = "print-type-sizes"
version = "0.1.0"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
edition = "2018"
description = "Print the sizes of all types used in a rust project"
license = "GPL-3.0-only"
repository = "https://github.com/malikolivier/print-type-sizes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.40"
clap = "2.33"
gag = "0.1"
